update thi